--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -551,6 +551,29 @@ dijit/Tree
 Tree::persist was changed to false by default.  Also, persisting a Tree no longer saves/restores which TreeNodes
 are selected, but just which TreeNodes are open.
 
+dijit bidi support
+------------------
+Dijit bidi functionality is not enabled anymore by the dijit/_BidiSupport module.  Instead you should be
+using the ``dojo-bidi`` flag.
+
+Replace code like:
+
+.. html ::
+
+  <script src="dojo.js"></script>
+  <script>
+    require(["dijit/Dialog", "dijit/_BidiSupport"], ...);
+  </script>
+
+by
+
+.. html ::
+
+  <script src="dojo.js" data-dojo-config="has:{'dojo-bidi': true}"></script>
+  <script>
+    require(["dijit/Dialog"], ...);
+  </script>
+
 dojox/charting migration
 ------------------------
 
@@ -563,7 +586,7 @@ Tooltip, highlight and magnify actions are no longer "hardcoded" into the spider
 	new Highlight(spiderchart);
 	new Magnify(spiderchart, "default", {duration: 800, scale: 1.5});
 
-Charting bidi features are not anymore enabled by the BidiSupport and BidiSupport3D modules. Instead you should be
+Charting bidi features are not enabled anymore by the BidiSupport and BidiSupport3D modules. Instead you should be
 using the ``dojo-bidi`` flag.
 
 Replace code like:
