--- a/releasenotes/1.10.rst
+++ b/releasenotes/1.10.rst
@@ -14,16 +14,13 @@ The following user agents have been tested and are supported in this release. If
 supported, it still may work, especially on browsers with rapid release cycles (Chrome, Firefox). Future minor releases
 of Dojo might include fixes to support future releases of these browsers, but it is not guaranteed.
 
-Also please note that even if IE6 and 7 code paths have not been removed, Dojo 1.10 is removing official support for
-those browsers.
-
 **Desktop**
 
-* Firefox 3.6-25
+* Firefox 3.6-28
 
 * Safari 5-6
 
-* Chrome 13-31
+* Chrome 13-33
 
 * IE 8-11
 
@@ -31,15 +28,15 @@ those browsers.
 
 **Mobile (dojox/mobile)**
 
-* iOS 4.x, 5.x (Mobile Safari) and 6.x (including all Dijit widgets except Editor)
+* iOS 5.x (Mobile Safari), 6.x and 7.x (including all Dijit widgets except Editor)
 
-* Android 2.2-2.3, 3.1-3.2, 4.0-4.2 (Platform browser)
+* Android 2.3, 4.0-4.4 (Platform browser) (including all Dijit widgets for Android 4.0-4.4 except Editor)
 
 * BlackBerry 6-7 & 10 (Platform browser)
 
 * Windows Phone 8 (IE10)
 
-* Mobile compatibility on desktop browsers: IE 8-10, Firefox 4-20, Safari 5-6, Chrome 13-26
+* Mobile compatibility on desktop browsers: IE 8-11, Firefox 4-28, Chrome 13-33
 
 
 **Server-Side User Agents**
