--- a/releasenotes/1.10.rst
+++ b/releasenotes/1.10.rst
@@ -63,6 +63,14 @@ Note though that you still cannot specify an initial size on the dialog.
 DojoX
 =====
 
+Calendar
+--------
+ * Decoration items support has been added. The calendar views are now supporting a decorationStore property to set a store to specify decoration items that will be displayed in the background below the data item renderers. A decoration item has the same major properties as regular data item especially start and end time.
+ * In columns view, each column representing a day can be divided into sub columns for categories, persons etc. See corresponding on the documentation for more information on this feature.
+ * A minimal width of a column (or a sub column if sub columns are configured) can now be by setting the minColumnWidth property on the column view. If columns or, if sub columns are specified, sub columns, are smaller than this property value, this property value is set and a horizontal scroll bar is displayed. Otherwise all the available space is used.
+ * Columns view is now supporting overnight display. The column view maxHours property can now go up to 36 (=12h the next day). To display the night simply set minHours to 12 and maxHours to 36.
+ * Constraints to limit the time range accessible through navigation has beed added. Set the minDate and maxDate properties to specify the range.
+
 Charting
 --------
  * Series can now be hidden without removing them
