--- a/releasenotes/1.10.rst
+++ b/releasenotes/1.10.rst
@@ -57,14 +57,14 @@ An extension event is also available: :ref:`dojo/on/debounce <dojo/on/debounce>`
 
 dojo/throttle
 -------------
-Provides support for throttling functions. Throttling ensure that only one execution a function is done during a predefined interval.
+Provides support for throttling functions. Throttling ensures that a function is only executed once during a predefined interval.
 :ref:`dojo/throttle <dojo/throttle>`
 An extension event is also available: :ref:`dojo/on/throttle <dojo/on/throttle>`
 
 dojo/on/asyncEventListener
 --------------------------
-asyncEventListener helps using asynchronous event listeners by ensuring the received event is properly forwarded.
-In some browser the event object can be invalid when reached from an asynchronous function (like a debounce).
+asyncEventListener helps using asynchronous event listeners by ensuring the received event will not be invalid when accessed from an asynchronous function.
+In old browsers (such as IE 8 and bellow) the event object can be invalid when reached from an asynchronous function (like a debounce).
 :ref:`dojo/on/asyncEventListener <dojo/on/asyncEventListener>`
 
 Dijit
