--- a/releasenotes/1.10.rst
+++ b/releasenotes/1.10.rst
@@ -49,7 +49,13 @@ Dojo Core
 * Added support for running non-DOM operations inside of WebWorkers
 * Added reusable HTML escape function
 * Various fixes for dojo/query
+* Added a configuration setting for a custom cache busting URL
+
+on
+__
+
 * `dojo/on` now allows multiple events by using a comma separated list, or an array for multiple extension events
+* Added `dojo/on/debounce` and `dojo/on/throttle`
 
 request
 -------
